--- a/ash_app/pubspec.yaml
+++ b/ash_app/pubspec.yaml
@@ -5,72 +5,78 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.10.0"
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
+  # Firebase
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.3.1
+  firebase_analytics: ^11.3.0
+  firebase_crashlytics: ^4.1.0
+  cloud_firestore: ^5.4.4
+  firebase_messaging: ^15.1.3
+
   # State Management
   provider: ^6.1.2
-  riverpod: ^3.0.3
   flutter_riverpod: ^3.0.3
 
-  # HTTP & API (REMOVED DUPLICATE)
+  # HTTP & API
   http: ^1.2.2
-  dio: ^5.4.0
+  dio: ^5.7.0
   web_socket_channel: ^3.0.1
 
   # Authentication
-  google_sign_in: ^7.2.0
+  google_sign_in: ^6.2.1  # Downgraded to a stable, existing version
   shared_preferences: ^2.3.2
-  sign_in_with_apple: ^6.1.2
+  sign_in_with_apple: ^6.1.3
   flutter_facebook_auth: ^7.1.1
 
   # Voice & Speech
   flutter_tts: ^4.0.2
   speech_to_text: ^7.3.0
-  permission_handler: ^12.0.1
+  permission_handler: ^11.3.1
   avatar_glow: ^3.0.1
 
   # UI Components
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   material_design_icons_flutter: ^7.0.7296
-  flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.4.1
 
   # Calendar & Date
-  intl: ^0.20.2
-  table_calendar: ^3.2.0
-  syncfusion_flutter_calendar: ^31.1.23
+  # intl: ^0.19.0  # Downgraded to be compatible with syncfusion_flutter_calendar
+  # table_calendar: ^3.2.0
+  # syncfusion_flutter_calendar: ^27.1.53
 
   # Storage & Preferences
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
   # Web Support
-  webview_flutter: ^4.4.2
+  webview_flutter: ^4.9.0
 
   # Utilities
-  uuid: ^4.3.3
-  logger: ^2.0.2+1
-  connectivity_plus: ^7.0.0
-  device_info_plus: ^12.1.0
+  uuid: ^4.5.1
+  logger: ^2.4.0
+  connectivity_plus: ^6.0.5
+  device_info_plus: ^11.1.0
 
   # Audio & Media
-  audioplayers: ^6.5.1
-  record: ^6.1.2
-
+  audioplayers: ^6.1.0
+  record_linux: ^0.1.0
   # Animations
-  lottie: ^3.3.2
-  animations: ^2.0.8
-  firebase_core: ^4.1.1
+  lottie: ^3.1.3
+  animations: ^2.0.11
+  google_api_availability: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-  build_runner: ^2.4.0  
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.13
   hive_generator: ^2.0.1
 
 flutter:
